Add more materials to wand allowed blocks (#69)
* A little optimization

* Add more blocks to wand whitelist

* fix build